test_case/rust-lang_rust/53584_415270707.rs
plain
Check compiletest suite=ui mode=ui (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:44:51] 
[00:44:51] running 4160 tests
[00:44:54] ....................................................................................................
[00:44:57] .........................................................F..........................................
[00:45:02] ....................................................................................................
[00:45:05] ....................................................................................................
[00:45:09] ..............i.....................................................................................
[00:45:09] ..............i.....................................................................................
[00:45:13] ..F.................................................................................................
[00:45:19] ..................ii.iii............................................................................
[00:45:19] ..................ii.iii............................................................................
[00:45:22] ......................................................................FFFF..........................
[00:45:24] ......................FF............................................................................
[00:45:29] ....................................................................................................
[00:45:31] ....................................................................................................
[00:45:31] ....................................................................................................
[00:45:34] ......i.............................FF.F..FF..............................i.........................
[00:45:37] ....................................................................................................
[00:45:40] ............................................F.......................................................
[00:45:42] ............F........................................i..............................................
[00:45:45] ....................................................................................................
[00:45:48] ...........F........................................................................................
[00:45:51] ...................................................................................F................
[00:45:57] ....................................................................................................
[00:46:00] ....................................................................................................
[00:46:03] ....................................................................................................
[00:46:07] ....................................................................................................
[00:46:07] ....................................................................................................
[00:46:09] ..............................................i.....................................................
[00:46:12] ......................................F.........................................................i.i.
[00:46:15] .ii.................................................................................................
[00:46:22] ....................................................................................................
[00:46:25] ....................................................................................................
[00:46:27] ....................................................................................................
[00:46:30] ....................................................................................................
[00:46:30] ....................................................................................................
[00:46:34] .......................i............................................................................
[00:46:37] .................F..................................................................................
[00:46:39] ....................................................................................................
[00:46:43] ..........................F...........................F.i...........................................
[00:46:47] ..........F........F...........................................................................F....
[00:46:49] .........F.F.F..................FF.F................................................................
46:53] 
[00:46:53] 17    |                                    ^^^ unexpected type argument
[00:46:53] 18 
[00:46:53] - error[E0088]: wrong number of lifetime arguments: expected 0, found 1
[00:46:53] - error[E0088]: wrong number of lifetime arguments: expected 0, found 1
[00:46:53] + error[E0107]: wrong number of lifetime arguments: expected 0, found 1
[00:46:53] 20   --> $DIR/bad-mid-path-type-params.rs:49:25
[00:46:53] 21    |
[00:46:53] 22 LL |     let _: S2 = Trait::<'a,isize>::new::<f64>(1, 1.0);
[00:46:53] 24 
[00:46:53] 25 error: aborting due to 4 previous errors
[00:46:53] 26 
[00:46:53] - Some errors occurred: E0087, E0088, E0107.
[00:46:53] - Some errors occurred: E0087, E0088, E0107.
[00:46:53] - For more information about an error, try `rustc --explain E0087`.
[00:46:53] + For more information about this error, try `rustc --explain E0107`.
[00:46:53] 29 
[00:46:53] 
[00:46:53] 
[00:46:53] The actual stderr differed from the expected stderr.
[00:46:53] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/bad/bad-mid-path-type-params/bad-mid-path-type-params.stderr
[00:46:53] To update references, rerun the tests and pass the `--bless` flag
[00:46:53] To only update this specific test, also pass `--test-args bad/bad-mid-path-type-params.rs`
[00:46:53] error: 1 errors occurred comparing output.
[00:46:53] status: exit code: 1
[00:46:53] status: exit code: 1
[00:46:53] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/bad/bad-mid-path-type-params.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/bad/bad-mid-path-type-params/a" "-Crpath" "-O" "-Zunstable-options"oo }             // error: wrong number of type arguments:\n                                  //        expected 1, found 0\nstruct Baz<S, T> { x: Foo<S, T> } // error: wrong number of type arugemtns:\n                                  //        expected 1, found 2\n